--- a/bill-app/Billed-app-FR-Front/src/css/newbill.css
+++ b/bill-app/Billed-app-FR-Front/src/css/newbill.css
@@ -61,3 +61,11 @@ textarea:focus, input:focus, select:focus {
 *[placeholder] {
   color: #0E5AE5 !important;
 }
+/*
+.type-file-control {
+  opacity: 1;
+}
+#errorMessageFile {
+  display: none;
+}
+*/
